Fixes bottom play bar's z-index, fixes spacing in side bar

--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@
 
 .nav-bar li{
   display: inline-block;
+  margin-bottom: 20px;
 }
 
 .nav-bar a{
@@ -156,6 +157,7 @@
   border-bottom: 1px solid #878787;
   font-size: 12px;
   padding-bottom: 5px;
+  padding-left: 2px;
 }
 
 .side-bar-user{
@@ -171,13 +173,13 @@
   object-fit: contain;
   overflow:hidden;
   vertical-align: middle;
-  margin-right: 5px;
 }
 
 .user-name{
   display:inline-block;
   vertical-align:middle;
   cursor:default;
+  padding-left: 5px;
 }
 
 
@@ -233,6 +235,8 @@
   height: 100px;
   padding:10px;
   background-color: #282828;
+  position: relative;
+  z-index: 1;
   
   display:flex;
   justify-content: space-between;
